base/echo-server/workloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${ECHO_SERVER_NAMESPACE:=echo-server}
