base/echo-server/workloads/service.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: ${ECHO_SERVER_NAMESPACE:=echo-server}
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app:  echo-server
