base/echo-server/workloads/ingress.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  namespace: ${ECHO_SERVER_NAMESPACE:=echo-server}
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${PRIMARY_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "video-input-antenna"
spec:
  rules:
    - host: echo-server.${PRIMARY_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: echo-server
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - echo-server.${PRIMARY_DOMAIN}
